added feedback link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  
+  <div style="height:20px;"><a href="mailto:steve.munleeuw@gmail.com">Send Feedback</a></div>
   <div id="map_canvas"></div>
 
   <script data-main="js/app/main" src="js/libs/require-jquery.js"></script>
